--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,64 @@
 .App {
   text-align: center;
+  margin: 20px;
+}
+.add-btn{
+  background-color: rgb(33, 110, 198);
+  border-radius: 20%;
+  margin-left:  10px;
+  margin-bottom: 10px;
+  height: 25px;
+  width: 45px;
+  color: aliceblue;
+  font-size: 10px;
+  box-sizing: content-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+.in-text{
+  box-sizing: content-box;
+  height: 45px;
+  background-color: rgb(241, 238, 234);
+  border-style: none;
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.check{
+  margin: auto;
+}
+.delete-btn{
+  background-color: black;
+  color: aliceblue;
+  border-style: none;
+  border-radius: 4px;
+  margin: auto;
+  height: 30px;
+  width: 70px;
+}
+.delete-btn:hover{
+  background-color: rgb(224, 17, 17);
+  color: aliceblue;
+  border-style: none;
+  border-radius: 4px;
+  margin: auto;
+  height: 30px;
+  width: 70px;
+}
+.container{
+  margin: 10px;
+  width: 300px;
+  margin:auto
+  
+}
+.raws{
+  width: 300px;
+  background-color: bisque;
+  margin: 5px auto;
+  border-radius: 10px;
+  justify-content: space-around;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding: 5px;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.spanContainer{
+  width: 100px;
+  word-break: break-all;
+  padding: 1px; 
 }
